# PCL_Registration

./: CMakeLists.txt  Initial Guesses.txt  main.cpp  osm_init_guess.txt  pcl_tools.cpp  pcl_tools.h
28_31/: icp_results (copy).txt  ndt_results (copy).txt  overall_icp (copy).txt  overall_ndt (copy).txt  overall_ndt (copy).txt~
Tests/: icp_results_g0_0.025.txt  icp_results_g0_0.05.txt  icp_results_g0_0.075.txt  icp_results_g1_0.025.txt  icp_results_g1_0.05.txt  icp_results_g1_0.075.txt  output.txt  output_g0_0.1_2.txt  output_tests.txt
Tests/overall_test_results/: Initial Guesses.txt  Initial Guesses.txt~  icp_results_g0_0.025.txt~  icp_results_g0_0.05.txt  icp_results_g0_0.05.txt~  icp_results_g0_0.075.txt  icp_results_g0_0.075.txt~  icp_results_g1_0.025.txt  icp_results_g1_0.025.txt~  icp_results_g1_0.05.txt  icp_results_g1_0.05.txt~  icp_results_g1_0.075.txt  icp_results_g1_0.075.txt~
Tests/points/: scan_1_1_points_0.txt  scan_1_1_points_1.txt  scan_1_1_points_2.txt  scan_1_24_points_0.txt  scan_1_24_points_1.txt  scan_1_24_points_2.txt  scan_1_25_points_0.txt  scan_1_25_points_1.txt  (+7 more)
final_results/: Initial Guesses.txt  Initial Guesses_combined.txt  icp_results_10.txt  icp_results_15.txt  icp_results_35.txt  initial_guesses_mat.txt  ndt_results.txt  overall_icp_10.txt  overall_icp_15.txt  overall_icp_35.txt  overall_initial_estimates.txt  overall_ndt.txt
results_19_83/: icp_results.txt  ndt_results.txt  overall_icp.txt  overall_ndt.txt
results_1_27/: icp_results_1_27.txt  ndt_results_1_27.txt  overall_icp_1_27.txt  overall_ndt_1_27.txt  overall_ndt_backup.txt
(+7 files in other folders)
